fix like photo , like gallery , sort photo , sort gallery
